--- a/style.css
+++ b/style.css
@@ -1,6 +1,42 @@
-.grid{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body,html {height: 100%;}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: antiquewhite;
+}
+
+.container {
+    margin: 3rem;
+    padding: 10px;
+    background-color: rgb(248, 248, 242);
+    box-shadow: 0 0 10px 0 #80808086;
+}
+
+.head {
+    border: 2px solid goldenrod;
+    width: 400px;
+    padding: 1rem;
+    background-color: rgb(248, 248, 242);
+}
+
+img{
+    width: 150px;
+    height: 150px;
+}
+
+.board{
     display: flex;
     flex-wrap: wrap;
-    width: 400px;
-    height: 300px;
+    width: 600px;
+    height: 450px;
+    box-shadow: 0 0 1px 4px brown;
 }
